--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tick",
   "version": "0.0.0",
-  "description": "",
+  "description": "CLI-based stock-symbol monitor that speaks",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jeremy Stashewsky <jstash@gmail.com>",
   "license": "MIT",
   "private": true,
   "dependencies": {
